--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"cheerio": "1.0.0-rc.12",
 		"csv-writer": "^1.6.0",
 		"express": "^4.18.2",
-		"sqlite3": "^5.1.6"
+		"sqlite3": "^5.1.6",
+		"better-sqlite3": "8.4.0"
 	}
 }
