--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"dependencies": {
 		"axios": "^1.4.0",
-		"cheerio": "1.0.0-rc.12",
+		"better-sqlite3": "8.4.0",
 		"csv-writer": "^1.6.0",
 		"express": "^4.18.2",
-		"sqlite3": "^5.1.6",
-		"better-sqlite3": "8.4.0"
+		"node-html-parser": "^6.1.5",
+		"sqlite3": "^5.1.6"
 	}
 }
