--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-	"dependencies": {
-		"axios": "^1.4.0",
-		"better-sqlite3": "8.4.0",
-		"csv-writer": "^1.6.0",
-		"express": "^4.18.2",
-		"node-html-parser": "^6.1.5",
-		"sqlite3": "^5.1.6"
-	}
+  "scripts": {
+    "start": "node api.js",
+    "dev": "nodemon api.js"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "better-sqlite3": "8.4.0",
+    "csv-writer": "^1.6.0",
+    "express": "^4.18.2",
+    "node-html-parser": "^6.1.5",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
